# devlens

./: .gitignore  LICENSE  README.me
ai/: main.py  requirements.txt
api/: .env  Cargo.toml
api/src/: main.rs
web/: package-lock.json  package.json
